<?xml version="1.0"?>
<package>
  <name>camera_v4l</name>
  <version>0.1.0</version>
  <description>Video-for-linux camera driver and ROS node based on OpenCV</description>

  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <author email="jordi.pages@pal-robotics.com">Jordi Pages</author>
  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
</package>
